# xtrem-craft-workshop

./: .gitignore  README.md  feedback.md  package-lock.json  package.json  xtrem-craft-workshop.sln
.github/workflow/: github-action.yml
.github/workflows/: ci.yml  github-action.yml  github-actions-demo.yml  job.yml  main.yml  maven.yml  php.yml  phpunit.yml
NOTES/: 01-code-review.md  02-dirty-code-clean-code.md  10-example-mapping.md  Agile-retropective.md  DomainDrivenDesigne.md  TODO.md  solid.md
REVIEW/: CleanCodeKessecé.md  TDD.md  mapping.md  review.md  review1.md
csharp/: money-problem.sln
csharp/docs/: 1-mutation-testing.md  2-portfolio.md  3.no-primitive-types.md  4.no-for-loops.md  5.only-immutable-types.md  6.no-exception-authorized.md  7.use-existing-monad.md  8.bank-properties.md
csharp/money-problem.Domain/: Bank.cs  Currency.cs  MissingExchangeRateException.cs  MoneyCalculator.cs  money-problem.Domain.csproj
csharp/money-problem.Tests/: BankShould.cs  BankTest.cs  MoneyCalculatorShould.cs  money-problem.Tests.csproj
docs/: dod.md  facilitation.md
docs/notes/: 07 - continuous-integration.md  1 - Code review  1 - Code review.md  10 - Example mapping.md  2 - Dirty-code-clean-code.md  3 - expressive_code.md  4 - test-anatomy.md  6 - test-driven-development.md
docs/notes/scribe/: note_scribe.txt
docs/solution/: 01-code-review.md  02-dirty-code-clean-code.md  03-expressive-code.md  06-example-mapping.md  07-test-driven-development.md  08-continuous-integration.md  10-example-mapping.md  11-example-mapping.md  9-fight-primitive-obsession.md
docs/solution/mutation-testing/: index.html
docs/solution/ubiquitous-language/: Bank.md  Money.md  PivotCurrency.md  Portfolio.md  concept.md
docs/step-by-step/: 01-code-review.md  02-dirty-code-clean-code.md  03-expressive-code.md  04-test-anatomy.md  05-mutation-testing.md  06-example-mapping.md  06-test-driven-development.md  07-continuous-integration.md  07-test-driven-development.md  08-fight-primitive-obsession.md  09-fight-primitive-obsession.md  09-immutable-types.md  10-example-mapping.md  11-implement-test-data-builder.md  12-redesign-the-bank.md  13-agile-retrospective.md
java/: .project  pom.xml
java/docs/: 1.mutation-testing.md  2.portfolio.md  3.no-primitive-types.md  4.no-for-loops.md  5.only-immutable-types.md  6.no-exception-authorized.md  7.use-existing-monad.md  8.bank-properties.md  9.bank-example-mapping.md
php/: composer.json  infection.html  infection.json5  phpunit.xml.dist  review.md
php/tests/: bootstrap.php
php/tests/InfectionReport/: infection.html
php/tests/MoneyProblem/: BankBuilder.php  BankTest.php  MoneyTest.php  PortfolioTest.php  Tools.php
python/: pyproject.toml  requirements.txt
python/src/: bank.py  currency.py  missing_exchange_rate_error.py  money_calculator.py
python/src/xterm_craft_workshop/: bank.py  missing_exchange_rate_error.py
python/tests/: test_bank.py  test_money.py
typescript/: .eslintignore  .eslintrc.json  README.md  eslint.config.mjs  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  review.md  stryker.conf.json  tsconfig.json
typescript/notes/: 01_code_review.md  02_dirty_code_clean_code.md  03-expressive-code.md  04-test-anatomy.md  05-mutation-testing.md  06-test-driven-development.md  2 dirty_code_clean_code  5 mutation testing  retro.md
typescript/src/: Bank.ts  Currency.ts  DuplicateCurrencyError.ts  ExchangeRates.ts  MissingExchangeRateError.ts  Money.ts  MoneyCalculator.ts  Portfolio.ts
typescript/stryker/: after.html  before.html
typescript/tests/: Bank.spec.ts  Money.spec.ts  MoneyCalculator.spec.ts  Portfolio.spec.ts  global.d.ts  portfolio.spec.ts
typescript/tests/Builders/: MoneyBuilder.ts  PortfolioBuilder.ts
typescript/tests/builders/: BankBuilder.ts
(+29 files in other folders)
